Fixed menu spacing desktop edge case

--- a/style.css
+++ b/style.css
@@ -95,9 +95,11 @@ header > a, img.Logo {
         height: 100%;
         width: 100%;
 
+        padding-right: 10px;
         flex-direction: row;
         align-items: center;
         justify-content: space-evenly;
+        gap: 10px;
     }
 }
 
